--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -5,8 +5,8 @@
 
 # push:sudo docker push kdu9303/docker-airflow:version
 
-# update version: docker build --tag kdu9303/docker-airflow:0.0.2 .
-# push:sudo docker push kdu9303/docker-airflow:0.0.2
+# update version: docker build --tag kdu9303/docker-airflow:0.0.6 .
+# push:sudo docker push kdu9303/docker-airflow:0.0.6
 # docker-compose down && docker-compose up -d
 
 # latest version: 0.0.5
@@ -27,6 +27,9 @@ RUN apt-get update \
 COPY dependencies/instantclient_21_3 ./dependencies/instantclient_21_3
 ENV LD_LIBRARY_PATH=/opt/airflow/dependencies/instantclient_21_3
 ENV PATH "$PATH:${LD_LIBRARY_PATH}"
+
+#modin engine
+ENV MODIN_ENGINE=ray
 
 # google_service_account 임데드 시킬것
 #  /home/ubuntu/keyfiles/google_service_account_key.json
