--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -5,11 +5,13 @@
 
 # push:sudo docker push kdu9303/docker-airflow:version
 
-# update version: docker build --tag kdu9303/docker-airflow:0.0.6 .
-# push:sudo docker push kdu9303/docker-airflow:0.0.6
+# update version: docker build --tag kdu9303/docker-airflow:0.0.7 .
+# push:sudo docker push kdu9303/docker-airflow:0.0.7
+
+# docker-compose images 버전 수정할 것
 # docker-compose down && docker-compose up -d
 
-# latest version: 0.0.5
+# latest version: 0.0.6
 
 FROM apache/airflow:2.1.4-python3.8
 USER root
@@ -28,8 +30,13 @@ COPY dependencies/instantclient_21_3 ./dependencies/instantclient_21_3
 ENV LD_LIBRARY_PATH=/opt/airflow/dependencies/instantclient_21_3
 ENV PATH "$PATH:${LD_LIBRARY_PATH}"
 
+#keyfile
+COPY ./keyfiles/google_service_account_key.json ./keyfiles
+
+ENV PYTHONPATH "${PYTHONPATH}:/opt/airflow/dags/"
+
 #modin engine
-ENV MODIN_ENGINE=ray
+ENV MODIN_ENGINE=dask
 
 # google_service_account 임데드 시킬것
 #  /home/ubuntu/keyfiles/google_service_account_key.json
