--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,6 +40,7 @@
 #                                Default: ''
 #
 # Feel free to modify this file to suit your needs.
+# docker-compose down && docker-compose up -d
 ---
 version: '3'
 x-airflow-common:
@@ -47,7 +48,7 @@ x-airflow-common:
   # In order to add custom dependencies or upgrade provider packages you can use your extended image.
   # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
   # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
-  image: ${AIRFLOW_IMAGE_NAME:-kdu9303/docker-airflow:0.0.7}
+  image: ${AIRFLOW_IMAGE_NAME:-kdu9303/docker-airflow:0.0.8}
   # build: .
   environment:
     &airflow-common-env
@@ -66,6 +67,7 @@ x-airflow-common:
     - ./logs:/opt/airflow/logs
     - ./plugins:/opt/airflow/plugins
     - ./data:/opt/airflow/data
+    
     
   user: "${AIRFLOW_UID:-50000}:${AIRFLOW_GID:-0}"
   depends_on:
