youtube api pipeline v1

--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -21,7 +21,8 @@ RUN apt-get update \
   && apt-get install -y --no-install-recommends libaio1 \   
   && apt-get autoremove -yqq --purge \
   && apt-get clean \
-  && rm -rf /var/lib/apt/lists/*
+  && rm -rf /var/lib/apt/lists/* \
+  && pip install --upgrade pip
 
 # instanct client 
 # TNS_ADMIN 변수 체크할 것
