--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@ data/
 
 # google api key
 google_service_account_key.json
+youtube_credentials_installed.json
+youtube_credentials_web_app.json
+refreshed_credentials.json
