--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -18,12 +18,16 @@ USER root
 RUN apt-get update \
   && apt-get install -y --no-install-recommends \
          vim \       
-  && apt-get install -y --no-install-recommends libaio1 \   
+  && apt-get install -y --no-install-recommends libaio1 \
   && apt-get autoremove -yqq --purge \
   && apt-get clean \
-  && rm -rf /var/lib/apt/lists/*
+  && rm -rf /var/lib/apt/lists/* 
   # && pip install --upgrade pip
   # && /usr/local/bin/python -m pip install --upgrade pip
+
+# timezone setting
+ENV TZ=Asia/Seoul
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 # instanct client 
 # TNS_ADMIN 변수 체크할 것
